--- a/public/styles.css
+++ b/public/styles.css
@@ -1,141 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);@import url(https://fonts.googleapis.com/css?family=Merriweather);* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  margin: 0 auto;
-  width: 90%;
-  max-width: 1240px;
-  font-family: 'Roboto', sans-serif; }
-
-/* Typography */
-h1 {
-  font-size: 28px;
-  font-weight: 300;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1; }
-
-h5 {
-  font-weight: 500;
-  font-size: 16px; }
-.filter-container {
-  color: #000;
-  background-color: rgba(222, 241, 244, 0.8);
-  padding: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-.filter {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 0 10px; }
-
-.filter__field {
-  -ms-flex-item-align: center;
-  align-self: center; }
-.product-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-top: 20px; }
-
-.product-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 2%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25); }
-
-/* Mobile Styles */
-@media only screen and (max-width: 400px) {
-  .product-card {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 100%;
-    flex: 1 100%; } }
-
-/* Tablet Styles */
-@media only screen and (min-width: 401px) and (max-width: 960px) {
-  .product-card {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 1 50%;
-    flex: 0 1 50%; } }
-
-/* Desktop Styles */
-@media only screen and (min-width: 961px) {
-  .product-card {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 1 25%;
-    flex: 0 1 25%; } }
-
-.product-image {
-  text-align: center; }
-
-.product-image img {
-  max-width: 100%; }
-
-.product-info {
-  margin-top: auto;
-  padding-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
-
-.product-info__item {
-  -ms-flex-item-align: center;
-  align-self: center; }
-
-.product-info__price {
-  font-size: 16px;
-  font-weight: 400; }
-
-@media (min-width: 480px) {
-  .product-info__price {
-    font-size: 22px; } }
-
-.product-badge {
-  margin-top: auto;
-  padding-top: 20px;
-  width: 100%;
-  height: 52px;
-  background-color: #fff; }
-body {
-  height: 100vh;
-  background-color: black;
-  color: #99fbc6;
-  font-size: 5rem;
-  font-weight: 900;
-  font-family: "Merriweather", sans-serif; }
-
-.container {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-  .container .image-wrapper {
-    display: inline-block;
-    margin: 0 10px; }
-    .container .image-wrapper__image {
-      width: auto;
-      height: 300px; }
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);*{margin:0;padding:0;box-sizing:border-box}body{margin:0 auto;width:90%;max-width:1240px;font-family:Roboto,sans-serif}h1{font-size:28px;font-weight:300;-webkit-box-flex:1;-ms-flex:1;flex:1}h5{font-weight:500;font-size:16px}.filter-container{color:#000;background-color:rgba(222,241,244,.8);padding:20px 0;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.filter,.filter-container{display:-webkit-box;display:-ms-flexbox;display:flex}.filter{width:100%;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;padding:0 10px}.filter__field{-ms-flex-item-align:center;align-self:center}.product-container{-ms-flex-wrap:wrap;flex-wrap:wrap;margin-top:20px}.product-card,.product-container{display:-webkit-box;display:-ms-flexbox;display:flex}.product-card{padding:2%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;box-shadow:0 0 1px 0 rgba(0,0,0,.25)}@media only screen and (max-width:400px){.product-card{-webkit-box-flex:1;-ms-flex:1 100%;flex:1 100%}}@media only screen and (min-width:401px) and (max-width:960px){.product-card{-webkit-box-flex:0;-ms-flex:0 1 50%;flex:0 1 50%}}@media only screen and (min-width:961px){.product-card{-webkit-box-flex:0;-ms-flex:0 1 25%;flex:0 1 25%}}.product-image{text-align:center}.product-image img{max-width:100%}.product-info{margin-top:auto;padding-top:20px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.product-info__item{-ms-flex-item-align:center;align-self:center}.product-info__price{font-size:16px;font-weight:400}@media (min-width:480px){.product-info__price{font-size:22px}}.product-badge{margin-top:auto;padding-top:20px;width:100%;height:52px;background-color:#fff}.product-badge--sale{background:url(images/sale.png) no-repeat}.product-badge--exclusive{background:url(images/exclusive.png) no-repeat}
