--- a/src/index.scss
+++ b/src/index.scss
@@ -6,11 +6,13 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 
+$roboto: "Roboto", sans-serif;
+
 body {
   margin: 0 auto;
 	width: 90%;
   max-width: 1240px;
-  font-family: 'Roboto', sans-serif;
+  font-family: $roboto;
 }
 
 /* Typography */
