--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
   margin: 0 auto;
   width: 90%;
   max-width: 1240px;
-  font-family: 'Roboto', sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 /* Typography */
 h1 {
@@ -22,7 +22,7 @@ h5 {
   font-weight: 500;
   font-size: 16px; }
 .filter-container {
-  color: #000;
+  color: black;
   background-color: rgba(222, 241, 244, 0.8);
   padding: 20px 0;
   display: -webkit-box;
